# plugin-test

./: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vue.config.js
nonebot-test/: __init__.py
nonebot_plugin_test/: __init__.py  utils.py  view.py
nonebot_plugin_test/drivers/: fastapi.py
nonebot_test/: __init__.py  exception.py  utils.py  view.py
nonebot_test/adapters/: test.py
nonebot_test/drivers/: fastapi.py
public/: index.html
src/: App.vue  main.js
src/components/: CodeTemplate.vue  Grouper.vue  Loading.vue  Messenger.vue  Sender.vue  templates.js
src/plugins/: axios.js  socketio.js  toastr.js  vuetify.js
src/router/: index.js
src/store/: index.js
src/styles/: variables.scss
src/views/: Frontend.vue  Home.vue
