[tool.poetry]
name = "nonebot-test"
version = "0.1.0"
description = "Test frontend for nonebot v2+"
authors = ["yanyongyu <yanyongyu_1@126.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://docs.nonebot.dev/"
repository = "https://github.com/nonebot/nonebot-test"
keywords = ["nonebot", "qq", "qqbot", "mirai", "coolq"]
packages = [
    { include = "nonebot_test" }
]

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
